--- a/.github/workflows/checkIn.yml
+++ b/.github/workflows/checkIn.yml
@@ -22,5 +22,7 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: '14'
-      - run: npm install
-      - run: npm start
+          cache: 'yarn'
+          cache-dependency-path: subdir/yarn.lock
+      - run: yarn
+      - run: yarn start
