--- a/.github/workflows/checkin.yml
+++ b/.github/workflows/checkin.yml
@@ -11,6 +11,8 @@ env:
   email: ${{ secrets.EMAIL }}
   passwd: ${{ secrets.TOKEN }}
   code: ''
+  mainURL: 'https://www.cordcloud.one'
+  bakURL: 'https://www.c-cloud.xyz'
 
 jobs:
   build:
