--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cordcloud-checkin",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "cordcloud自动签到",
   "main": "index.js",
   "scripts": {
@@ -13,7 +13,8 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.21.4",
-    "dotenv": "^10.0.0"
+    "dotenv": "^10.0.0",
+    "nodemailer": "^6.8.0"
   },
   "devDependencies": {
     "prettier": "^2.4.0"
