--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "cordcloud-checkin",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "cordcloud自动签到",
   "main": "index.js",
   "scripts": {
-    "start": "node ./src/index.js"
+    "start": "node ./index.js"
   },
   "keywords": [
     "cordcloud"
@@ -12,9 +12,12 @@
   "author": "whosydd <dev.youngkwok718@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.21.4",
-    "dotenv": "^10.0.0",
-    "nodemailer": "^6.8.0"
+    "axios": "^1.2.0",
+    "dotenv": "^16.0.3",
+    "nodemailer": "^6.8.0",
+    "puppeteer": "^19.3.0",
+    "puppeteer-extra": "^3.3.4",
+    "puppeteer-extra-plugin-stealth": "^2.11.1"
   },
   "devDependencies": {
     "prettier": "^2.4.0"
