--- a/.github/workflows/checkin.yml
+++ b/.github/workflows/checkin.yml
@@ -20,9 +20,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 6.32.9
       - uses: actions/setup-node@v3
         with:
-          node-version: '16'
+          node-version: '14'
           cache: 'pnpm'
-      - run: pnpm install
+      - run: pnpm install --frozen-lockfile
       - run: pnpm start
