workflow: config pnpm

--- a/.github/workflows/checkin.yml
+++ b/.github/workflows/checkin.yml
@@ -27,5 +27,5 @@ jobs:
         with:
           node-version: '14'
           cache: 'pnpm'
-      - run: pnpm install --frozen-lockfile
+      - run: pnpm install --no-frozen-lockfile
       - run: pnpm start
