--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   "author": "whosydd <dev.youngkwok718@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "axios": "^1.2.0",
-    "dotenv": "^16.0.3",
+    "axios": "1.1.3",
     "nodemailer": "^6.8.0",
     "puppeteer": "^19.3.0",
     "puppeteer-extra": "^3.3.4",
