--- a/.github/workflows/checkin.yml
+++ b/.github/workflows/checkin.yml
@@ -8,11 +8,9 @@ on:
   workflow_dispatch: # click the button on Github repo!
 
 env:
-  SEND_MAIL: ${{ secrets.SEND_MAIL }}
-  RECEIVE_MAIL: ${{ secrets.RECEIVE_MAIL }}
-  TOKEN: ${{ secrets.TOKEN }}
-  URL: ${{ secrets.URL }}
-  COOKIE: ${{ secrets.COOKIE }}
+  EMAIL: ${{ secrets.EMAIL }}
+  PASSWD: ${{ secrets.PASSWD }}
+  URL: https://cordcloud.biz/auth/login
 
 jobs:
   build:
