--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "cordcloud-checkin",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "cordcloud自动签到",
   "main": "index.js",
   "scripts": {
-    "start": "node ./src/index.js"
+    "start": "xvfb-run node ./playwright.js"
   },
   "keywords": [
     "cordcloud"
@@ -12,11 +12,12 @@
   "author": "whosydd <dev.youngkwok718@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.21.4",
     "dotenv": "^10.0.0",
-    "nodemailer": "^6.8.0"
+    "playwright-extra": "^4.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2"
   },
   "devDependencies": {
+    "playwright": "^1.32.1",
     "prettier": "^2.4.0"
   }
 }
